--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1>My First Google Map</h1>
+<h1>My First Google Map!</h1>
 
 <div id="map" style="width:400px;height:400px;background:yellow"></div>
 
@@ -27,3 +27,4 @@ var marker = new google.maps.Marker({position:myCenter});
 
 </body>
 </html>
+
